// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate snapshots Subheading: 0 1`] = `
<h3
  className="typography_3-0-1-31 subheading-0-1-22 subheading_1-0-1-23"
>
  Subheading test string
</h3>
`;

exports[`generate snapshots Subheading: 1 1`] = `
<h1
  className="typography_3-0-1-47 subheading-0-1-38 subheading_1-0-1-39"
  data-sketch-symbol="Subheading 1"
>
  Subheading test string
</h1>
`;

exports[`generate snapshots Subheading: 2 1`] = `
<h1
  className="typography_3-0-1-63 subheading-0-1-54 subheading_1-0-1-55"
  data-sketch-symbol="Subheading 1"
>
  Subheading test string
</h1>
`;

exports[`generate snapshots Subheading: 3 1`] = `
<h2
  className="typography_4-0-1-80 subheading-0-1-70 subheading_2-0-1-72"
  data-sketch-symbol="Subheading 2"
>
  Subheading test string
</h2>
`;

exports[`generate snapshots Subheading: 4 1`] = `
<h3
  className="typography_5-0-1-97 subheading-0-1-86 subheading_3-0-1-89"
  data-sketch-symbol="Subheading 3"
>
  Subheading test string
</h3>
`;

exports[`generate snapshots Subheading: 5 1`] = `
<h4
  className="typography_6-0-1-114 subheading-0-1-102 subheading_4-0-1-106"
  data-sketch-symbol="Subheading 4"
>
  Subheading test string
</h4>
`;

exports[`generate snapshots Subheading: 6 1`] = `
<h5
  className="typography_7-0-1-131 subheading-0-1-118 subheading_5-0-1-123"
  data-sketch-symbol="Subheading 5"
>
  Subheading test string
</h5>
`;

exports[`generate snapshots Subheading: 7 1`] = `
<h6
  className="typography_8-0-1-148 subheading-0-1-134 subheading_6-0-1-140"
  data-sketch-symbol="Subheading 6"
>
  Subheading test string
</h6>
`;
